<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_maps">Map</string>
    <string name="tipo_marcacao">Tipo de local</string>
    <string name="bom">Bom</string>
    <string name="ruim">Ruim</string>
    <string name="ok">Ok</string>
    <string name="cancelar">Cancelar</string>
    <string name="procurar">Procurar</string>
    <string name="digiteLocal">Digite o nome de um local</string>
</resources>
